# xiaobo-agent

./: .gitignore  Dockerfile  README.md  TODO.md  debug过程.md  docker-compose.yml  main.py  pyproject.toml
android-app/: README.md  build.gradle  gradlew  settings.gradle
android-app/app/: build.gradle  proguard-rules.pro
config/: config.example.yaml  config.yaml.example  settings.py
deploy/: start.sh  xiaobo-agent.service
docs/: PHASE3_PLAN.md  PHONE_SETUP_GUIDE.md
docs/plans/: 2026-07-05-phase3-full.md
src/api/: README.md  __init__.py  auth.py  chat.py  phone.py  routes.py
src/companion/: __init__.py  command_dispatcher.py  daily_report.py  emotion_tracker.py  extractor.py  handler.py  pattern_analyzer.py  proactive.py  report_generator.py  scheduler.py  task_manager.py
src/dashboard/: README.md  __init__.py  app.py
src/feishu/: __init__.py  connection.py
tests/: conftest.py  test_auth.py  test_backup.py  test_command_dispatcher.py  test_dashboard.py  test_e2e.py  test_e2e_phase2.py  test_embedding_cache.py  test_extractor.py  test_fact_dedup.py  test_forgetter.py  test_learning_detection.py  test_learning_log.py  test_llm.py  test_llm_task_detection.py  test_logger.py  test_memory.py  test_memory_context.py  test_memory_tasks.py  test_pattern_analyzer.py  test_phone_api.py  test_phone_monitor.py  test_proactive.py  test_prompt_restructure.py  test_report_generator.py  test_retry.py  test_routes.py  test_semantic_integration.py  test_summarizer.py  test_task_manager.py  test_temperature.py  test_upcoming_tasks.py  test_vector_store.py
(+37 files in other folders)
